--- a/studentportfolio/index.html
+++ b/studentportfolio/index.html
@@ -104,7 +104,7 @@
                 <div
                   class="d-flex align-items-center justify-content-between mb-2"
                 >
-                  <h5 class="card-title mb-0">Music Events API</h5>
+                  <h5 class="card-title mb-0">Music Events Management API</h5>
                   <span class="badge bg-success">Live</span>
                 </div>
                 <p class="card-text flex-grow-1">
